--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "404",
 	"version": "1.0.0",
 	"description": "A landing page for soft 404 errors",
-	"main": "src/404.js",
+	"main": "src/index.js",
 	"dependencies": {
 		"three": "^0.138.3"
 	},
@@ -10,7 +10,8 @@
 		"parcel": "^2.3.2"
 	},
 	"scripts": {
-		"dev": "parcel src/404.html"
+		"dev": "parcel src/index.html",
+		"build": "parcel build src/index.html"
 	},
 	"keywords": [
 		"404",
