--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
 	"name": "404",
-	"version": "1.0.0",
+	"version": "2.0.0",
 	"description": "A landing page for soft 404 errors",
 	"source": "src/index.html",
 	"scripts": {
 		"start": "parcel",
-		"build": "parcel build"
+		"build": "parcel build",
+		"format": "prettier --write src"
 	},
 	"dependencies": {
-		"three": "^0.138.3"
+		"three": "^0.143.0"
 	},
 	"devDependencies": {
-		"parcel": "^2.3.2"
+		"parcel": "^2.7.0",
+		"prettier": "^2.7.1"
 	},
 	"author": "ma1ted",
 	"license": "ISC"
